# eplines

./: LICENSE  README.md  setup.cfg
examples/: example_generated_data.py  example_temperature_timeseries.py  example_usgs_discharge.ipynb  example_usgs_discharge.py  usgs_12462500.csv
src/eplines/: __init__.py  eplines.py
tests/: expected_grids.npz  test_ecdflines.py
