[metadata]
name = eplines
version = 0.1
description = Heatmaps of empirical and exceedance probability of many (time-)series.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/rhkarls/eplines
project_urls =
    Bug Tracker = https://github.com/rhkarls/eplines/issues
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.8
package_dir=
    =src
packages = find:
zip_safe = False
install_requires =
    numpy
    matplotlib

[options.packages.find]
where = src